--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label for="description">Description</label>
         <textarea  rows="3" placeholder="Task Description" id="task-description"></textarea>
 
-        <input type="submit" value="Save">
+        <input type="submit" id="btn-enviar" value="Save">
     </form>
     <div id="task-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.26/dist/sweetalert2.all.min.js"></script>
